# DodgeGame

./: CMakeLists.txt
Data/Shaders/: glow_demo.frag  glow_demo.glsl  shader.frag
mac/: Info.plist
src/: Game.cpp  Game.h  main.cpp
src/GameObjects/: GlowSprite.cpp  GlowSprite.h
